Added Pictures and blurbs

--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
         <!-- HERO SECTION -->
         <div class="hero">
             <h1>Visit Rockford</h1>
-            <h2>Enjoy culture and sports in this vibrant city in North Central Illinois.</h2>
+            <h2>Enjoy live music, access to nature, and some great restaurants in this vibrant city in North Central Illinois and surrounding area.</h2>
         </div>
         
         <!-- ACTIVITIES SECTION -->
         <div class="activities">
             <h3>Top three activities to do in the Rockford area</h3>
             <img src="images/canyonPic.jpg">
-            <img src="images/theatre.jpg">
-            <img src="images/sports.jpg">
+                <p>Take a stroll through on of the parks or forset proserves in the area</p>
+            <img src="images/marysPlace.png">
+                <p>Stop in at one of the local dive bar/music venue, <a href="http://marysplacebar.com/" target="_blank">Mary's Place</a></p>
+            <img src="images/pigsMind.jpg">
+                <p>One of the great brewries and restaurant in the area. This one is <a href="https://www.pigmindsbrewing.com/" target="_blank">Pig Minds</a></p>
         </div>
 
         <!-- GUIDE SECTION -->
@@ -24,7 +27,7 @@
             <h3>Your (lost) guide</h3>
             <p>"I have lived in the Rockford area for 1.5 years, so I can show you <em>hardly</em> anything. Lets get lost together."</p>
             <h4>Matt Bentley</h4>
-            <img src="images/per.jpg">
+            <img src="images/canyonPic.jpg">
         </div>
     </body>
 </html>
