Updating hero to id, adding guide class

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         
         <!-- HERO SECTION -->
-        <div class="hero">
+        <div id="hero">
             <h1>Visit Rockford</h1>
             <h2>Enjoy live music, access to nature, and some great restaurants in this vibrant city in North Central Illinois and surrounding area.</h2>
         </div>
@@ -23,8 +23,8 @@
         </div>
 
         <!-- GUIDE SECTION -->
-        <div>
-            <h3>Your (lost) guide</h3>
+        <div class="guide">
+            <h4>Your (lost) guide</h4>
             <p>"I have lived in the Rockford area for 1.5 years, so I can show you <em>hardly</em> anything. Lets get lost together."</p>
             <h4>Matt Bentley</h4>
             <img src="images/canyonPic.jpg">
