--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         
         <!-- HERO SECTION -->
         <div id="hero">
-            <h1>Visit Rockford</h1>
-            <h2>Enjoy live music, access to nature, and some great restaurants in this vibrant city in North Central Illinois and surrounding area.</h2>
+            <h1 class="header">Visit Rockford</h1>
+            <p class="header">Enjoy live music, access to nature, and some great restaurants in this vibrant city in North Central Illinois and surrounding area.</p>
         </div>
         
         <!-- ACTIVITIES SECTION -->
