--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         <!-- HERO SECTION -->
         <div id="hero">
             <h1 class="header">Visit Rockford</h1>
-            <p class="header" id="hero-p">Enjoy live music, access to nature, and some great restaurants in this vibrant city in North Central Illinois and surrounding area.</p>
+            <p class="header" id="hero-p">Enjoy live music, access to nature, and some great restaurants <br>
+                in this vibrant city in North Central Illinois and surrounding area.</p>
         </div>
         
         <!-- ACTIVITIES SECTION -->
