--- a/index.html
+++ b/index.html
@@ -15,12 +15,18 @@
         <!-- ACTIVITIES SECTION -->
         <div class="activities">
             <h3>Top three activities to do in the Rockford area</h3>
-            <img src="images/rockCut.jpg">
+            <div class="activity-sec">
+                <img src="images/rockCut.jpg">
                 <p>Take a stroll through on of the parks or forset proserves in the area durning winter for cross-country skying, if you're into that.</p>
-            <img src="images/marysPlace.png">
+            </div>
+            <div class="activity-sec">
+                <img src="images/marysPlace.png">
                 <p>Stop in at one of the local dive bar/music venue, <a href="http://marysplacebar.com/" target="_blank">Mary's Place</a></p>
-            <img src="images/pigsMind.jpg">
+            </div>
+            <div class="activity-sec">
+                <img src="images/pigsMind.jpg">
                 <p>One of the great brewries and restaurant in the area. This one is <a href="https://www.pigmindsbrewing.com/" target="_blank">Pig Minds</a></p>
+            </div>
         </div>
 
         <!-- GUIDE SECTION -->
