--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         
         <!-- ACTIVITIES SECTION -->
         <div class="activities">
+            <div id="activities-header">
             <h3>Top three activities to do in the Rockford area</h3>
+            </div>
             <div class="activity-sec">
                 <img src="images/rockCut.jpg">
                 <p>Take a stroll through on of the parks or forset proserves in the area durning winter for cross-country skying, if you're into that.</p>
