--- a/index.html
+++ b/index.html
@@ -19,19 +19,21 @@
 
         <div class="activities">
             <div class="activity-sec">
-                <img src="images/rockCut.jpg">
-                <h3>Touch Grass</h3>
-                <p>Take a stroll through on of the parks or forset proserves in the area durning winter for cross-country skying, if you're into that.</p>
-            </div>
-            <div class="activity-sec">
-                <img src="images/marysPlace.png">
-                <h3>Go to a Bar</h3>
-                <p>Stop in at one of the local dive bar/music venue, <a href="http://marysplacebar.com/" target="_blank">Mary's Place</a></p>
-            </div>
-            <div class="activity-sec">
-                <img src="images/pigsMind.jpg">
-                <h3>Restaurant and Brewries</h3>
-                <p>One of the great brewries and restaurant in the area. This one is <a href="https://www.pigmindsbrewing.com/" target="_blank">Pig Minds</a></p>
+                <div id="touch-grass">
+                    <img src="images/rockCut.jpg">
+                    <h3>Touch Grass</h3>
+                    <p>Take a stroll through on of the parks or forset proserves in the area durning winter for cross-country skying, if you're into that.</p>
+                </div>
+                <div class="bar">
+                    <img src="images/marysPlace.png">
+                    <h3>Go to a Bar</h3>
+                    <p>Stop in at one of the local dive bar/music venue, <a href="http://marysplacebar.com/" target="_blank">Mary's Place</a></p>
+                </div>
+                <div class="restaurant-brewery">
+                    <img src="images/pigsMind.jpg">
+                    <h3>Restaurant and Brewries</h3>
+                    <p>One of the great brewries and restaurant in the area. This one is <a href="https://www.pigmindsbrewing.com/" target="_blank">Pig Minds</a></p>
+                </div>
             </div>
         </div>
 
