--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         <div class="activities">           
             <div class="activity-sec">
                 <div>
-                    <img src="images/rockCut.jpg">
+                    <img src="images/tree.jpg">
                     <h3>Touch Grass</h3>
-                    <p>Take a stroll through on of the parks or forset proserves in the area durning winter for cross-country skying, if you're into that.</p>
+                    <p>Take a stroll through on of the parks or forset proserves in the area.</p>
                 </div>
 
                 <div>
-                    <img src="images/marysPlace.png">
+                    <img src="images/barSign.jpg">
                     <h3>Go to a Bar</h3>
                     <p>Stop in at one of the local dive bar/music venue, <a href="http://marysplacebar.com/" target="_blank">Mary's Place</a></p>
                 </div>
