New Class add with width of 50px

--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
 
         <div class="activities">           
             <div class="activity-sec">
-                <div>
+                <div class="activity-box">
                     <img src="images/tree.jpg">
                     <h3>Touch Grass</h3>
                     <p>Take a stroll through on of the parks or forset proserves in the area.</p>
                 </div>
 
-                <div>
+                <div class="activity-box">
                     <img src="images/barSign.jpg">
                     <h3>Go to a Bar</h3>
                     <p>Stop in at one of the local dive bar/music venue, <a href="http://marysplacebar.com/" target="_blank">Mary's Place</a></p>
                 </div>
                 
-                <div>
+                <div class="activity-box">
                     <img src="images/pigsMind.jpg">
                     <h3>Restaurant and Brewries</h3>
                     <p>One of the great brewries and restaurant in the area. This one is <a href="https://www.pigmindsbrewing.com/" target="_blank">Pig Minds</a></p>
