--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="activities">           
             <div class="activity-sec">
                 <div class="activity-box">
-                    <img src="images/tree.jpg">
+                    <img src="images/treeLarger.jpg">
                     <h3>Touch Grass</h3>
                     <p>Take a stroll through on of the parks or forset proserves in the area.</p>
                 </div>
