Updating guide section

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <!-- GUIDE SECTION -->
         <div class="guide">
-            <h4>Your (lost) guide</h4>
+            <h4>Your (<em>lost</em>) guide</h4>
             <p>"I have lived in the Rockford area for 1.5 years, so I can show you <em>hardly</em> anything. Lets get lost together."</p>
             <h4>Matt Bentley</h4>
             <img src="images/canyonPic.jpg">
