updating guide section

--- a/index.html
+++ b/index.html
@@ -42,10 +42,14 @@
 
         <!-- GUIDE SECTION -->
         <div class="guide">
-            <h4>Your (<em>lost</em>) guide</h4>
-            <p>"I have lived in the Rockford area for 1.5 years, so I can show you <em>hardly</em> anything. Lets get lost together."</p>
-            <h4>Matt Bentley</h4>
-            <img src="images/canyonPic.jpg">
+            <div>
+                <img src="images/canyonPic.jpg" class="guide-image">
+            </div>
+            <div>
+                <h4>Your (<em>lost</em>) guide</h4>
+                <p>"I have lived in the Rockford area for 1.5 years, so I can show you <em>hardly</em> anything. Lets get lost together."</p>
+                <h4>Matt Bentley</h4>
+            </div>
         </div>
     </body>
 </html>
