--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
             <div>
                 <h4>Your (<em>lost</em>) guide</h4>
-                <p>"I have lived in the Rockford area for 1.5 years, so I can show you <em>hardly</em> anything. Lets get lost together."</p>
+                <p id="guide-blurb">"I have lived in the Rockford area for 1.5 years, so I can show you <em>hardly</em> anything. Lets get lost together."</p>
                 <h4>Matt Bentley</h4>
             </div>
         </div>
