moving id beer to barSign img

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                     <p>Take a stroll through on of the parks or forset proserves in the area.</p>
                 </div>
 
-                <div class="activity-box" id="beer">
-                    <img src="images/barSign.jpg">
+                <div class="activity-box">
+                    <img src="images/barSign.jpg" id="beer">
                     <h3>Go to a Bar</h3>
                     <p>Stop in at one of the local dive bar/music venue, <a href="http://marysplacebar.com/" target="_blank">Mary's Place</a></p>
                 </div>
