--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
 
                 <div class="activity-box">
-                    <img src="images/barSign.jpg" id="beer">
+                    <div id="beer">
                     <h3>Go to a Bar</h3>
                     <p>Stop in at one of the local dive bar/music venue, <a href="http://marysplacebar.com/" target="_blank">Mary's Place</a></p>
                 </div>
