--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
 
         <div class="activities">
-            
+
                 <div class="activity-box">
                     <img src="images/treeLarger.jpg">
                     <h3>Touch Grass</h3>
@@ -27,7 +27,7 @@
                 </div>
 
                 <div class="activity-box">
-                    <div id="beer"></div>
+                    <div class="activity-box" id="beer"></div>
                     <h3>Go to a Bar</h3>
                     <p>Stop in at one of the local dive bar/music venue, <a href="http://marysplacebar.com/" target="_blank">Mary's Place</a></p>
                 </div>
