--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
                 </div>
 
                 <div class="activity-box">
-                    <div class="activity-box" id="beer"></div>
+                    <!-- <div class="activity-box" id="beer"></div> -->
+                     <img src="images/barSign.jpg">
                     <h3>Go to a Bar</h3>
                     <p>Stop in at one of the local dive bar/music venue, <a href="http://marysplacebar.com/" target="_blank">Mary's Place</a></p>
                 </div>
