--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
                 <div class="activity-box">
                     <!-- <div class="activity-box" id="beer"></div> -->
-                     <img src="images/barSign.jpg">
+                     <img src="images/barSign.jpg" id="beer">
                     <h3>Go to a Bar</h3>
                     <p>Stop in at one of the local dive bar/music venue, <a href="http://marysplacebar.com/" target="_blank">Mary's Place</a></p>
                 </div>
